--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,32 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(238, 238, 238), 255);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1 {
+  font-size: 2em;
+  font-weight: bolder;
+}
+h2 {
+  font-size: 1.5em;
+  font-weight: bolder;
+}
+h3 {
+  font-size: 1.17em;
+  font-weight: bolder;
+}
+h4 {
+  font-size: 1em;
+  font-weight: bolder;
+}
+h5 {
+  font-size: 0.83em;
+  font-weight: bolder;
+}
+h6 {
+  font-size: 0.67em;
+  font-weight: bolder;
 }
