--- a/src/Components/Home/Version/Version.css
+++ b/src/Components/Home/Version/Version.css
@@ -28,6 +28,9 @@
   border-radius: 10px;
   overflow: hidden;
   padding: 10px;
+  width: 200px;
+  height: 200px;
+  /* border-radius: 100%; */
 }
 .rainbow::after {
   content: "";
