--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap");
 body {
   background-color: #f0f2f5;
+  font-family: "Source Sans Pro", sans-serif;
 }
 
 h1 {
