--- a/src/Components/Shared/Navigation/Navigation.css
+++ b/src/Components/Shared/Navigation/Navigation.css
@@ -1,6 +1,12 @@
 .nav {
   width: 100%;
 }
+.bg {
+  box-shadow: 0px 0px 18px -3px rgba(0, 0, 0, 0.1),
+    0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+  background-color: white;
+  border-radius: 100%;
+}
 /* .img {
   border-radius: 100%;
 } */
