--- a/src/Components/Home/Contact/Contact.css
+++ b/src/Components/Home/Contact/Contact.css
@@ -16,13 +16,50 @@
   font-style: normal;
 }
 .c-header {
-  position: absolute;
+  top: 40%;
+  left: 40%;
+  position: fixed;
   width: 100%;
   height: 100%;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  align-content: center;
   font-size: 40px;
   color: #c6c6c62f;
+}
+.c-header-details {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+
+  margin: 10px;
+}
+.c-bottom-icon {
+  position: absolute;
+  bottom: -18%;
+  left: 40%;
+  font-size: 50px;
+  text-align: center;
+}
+.c-bottom-icon > h1 {
+  transform: rotate(90deg);
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  color: #3f3d56;
+}
+/* .c-address-section {
+  box-shadow: 0px 0px 18px -3px rgba(0, 0, 0, 0.1),
+    0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+} */
+.c-address {
+  display: flex;
+  align-items: center;
+  padding: 5px 10px;
+  /* height: 60px; */
+  margin: 15px;
+  gap: 15px;
+}
+.c-address-icon {
+  font-size: 1.5rem;
+  line-height: 2rem;
+  color: #808080;
 }
