--- a/src/Components/Home/Contact/Contact.css
+++ b/src/Components/Home/Contact/Contact.css
@@ -32,13 +32,7 @@
 
   margin: 10px;
 }
-.c-bottom-icon {
-  position: absolute;
-  bottom: -18%;
-  left: 40%;
-  font-size: 50px;
-  text-align: center;
-}
+
 .c-bottom-icon > h1 {
   transform: rotate(90deg);
   display: inline-block;
@@ -62,4 +56,40 @@
   font-size: 1.5rem;
   line-height: 2rem;
   color: #808080;
+}
+.c-bottom-icon {
+  position: absolute;
+  bottom: -18%;
+  left: 40%;
+  font-size: 50px;
+  text-align: center;
+}
+
+@media only screen and (max-width: 48em) {
+  .c-bottom-icon {
+    position: absolute;
+    bottom: -18%;
+    left: 10%;
+    font-size: 50px;
+    text-align: center;
+  }
+  .c-contact {
+    margin: 0;
+    border-radius: 0;
+    border: 1px solid #e9e5e5;
+    box-shadow: 0px 0px 18px -3px rgba(0, 0, 0, 0.1),
+      0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+    background: rgb(255, 255, 255);
+  }
+  .c-header {
+    top: 40%;
+    left: 0%;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    text-align: center;
+    font-size: 2rem;
+    color: #c6c6c62f;
+  }
 }
