--- a/src/Components/Home/Works/Works.css
+++ b/src/Components/Home/Works/Works.css
@@ -45,6 +45,47 @@
   padding: 0 7px;
 }
 
+.art-section {
+  transition: 0.4s;
+  position: relative;
+}
+
+.art-images {
+  transition: 0.4s;
+}
+.art-section:hover .art-images {
+  filter: blur(1px) brightness(80%);
+  -webkit-filter: blur(1px) brightness(80%);
+  -moz-filter: blur(1px) brightness(80%);
+  cursor: pointer;
+}
+
+.text {
+  position: absolute;
+  font-family: "Delius", cursive;
+  bottom: 0%;
+  left: 50%;
+  transition: 0.6s;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+  cursor: pointer;
+  font-weight: 500;
+  text-transform: capitalize;
+  color: #d6d6d6;
+  font-size: 20px;
+}
+.art-section:hover .text {
+  font-size: 30px;
+  padding: 0;
+  width: fit-content;
+  height: fit-content;
+  margin: 0%;
+  bottom: 40%;
+  left: 50%;
+}
+
 /* 
 
 .search-box {
