--- a/src/Components/Home/About/About.css
+++ b/src/Components/Home/About/About.css
@@ -11,7 +11,6 @@
 .a-skill {
   width: 100%;
   margin: 10px 20px;
-  border-radius: 5px;
   height: 100px;
   display: flex;
   justify-content: center;
@@ -27,6 +26,11 @@
     rgba(0, 84, 166, 1) 0%,
     rgba(132, 189, 201, 1) 90%
   );
+  animation: skill 8s ease-in-out infinite;
+  border-radius: 0px 44px 0px 45px;
+  transition: all 1s ease-in-out;
+  font-size: 25px;
+  text-align: center;
 }
 .a-bottom-icon {
   position: absolute;
@@ -48,4 +52,98 @@
   border-radius: 100%;
   width: 300px;
   height: 300px;
+}
+.bottom-arrow-icon {
+  position: absolute;
+  bottom: -100%;
+  left: 45%;
+  font-size: 50px;
+  text-align: center;
+}
+.bottom-arrow-icon > h1 {
+  transform: rotate(90deg);
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  color: #3f3d56;
+}
+/* sass */
+:root {
+  --primary: rgba(255, 244, 228, 1);
+  --secondary: rgba(240, 246, 238, 1);
+  --third: rgba(255, 244, 228, 1);
+}
+
+.shape {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Delius", cursive;
+  font-weight: 700;
+  font-size: 25px;
+  text-align: center;
+  background: linear-gradient(45deg, var(--primary) 0%, var(--secondary) 100%);
+  animation: morph 8s ease-in-out infinite;
+  border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
+  height: 300px;
+  transition: all 1s ease-in-out;
+  width: 300px;
+  z-index: 5;
+}
+
+@keyframes morph {
+  0% {
+    border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
+    background: linear-gradient(
+      45deg,
+      var(--primary) 0%,
+      var(--secondary) 100%
+    );
+  }
+
+  50% {
+    border-radius: 30% 60% 70% 40% / 50% 60% 30% 60%;
+    background: linear-gradient(45deg, var(--third) 0%, var(--secondary) 100%);
+  }
+
+  100% {
+    border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
+    background: linear-gradient(
+      45deg,
+      var(--primary) 0%,
+      var(--secondary) 100%
+    );
+  }
+}
+@keyframes skill {
+  0% {
+    border-radius: 44px 0px 44px 0px;
+    background: linear-gradient(
+      45deg,
+      var(--primary) 0%,
+      var(--secondary) 100%
+    );
+  }
+
+  25% {
+    border-radius: 0px 44px 0px 44px;
+    background: linear-gradient(45deg, var(--third) 0%, var(--secondary) 100%);
+  }
+  50% {
+    border-radius: 44px 0px 44px 0px;
+    background: linear-gradient(45deg, var(--third) 0%, var(--secondary) 100%);
+  }
+  75% {
+    border-radius: 0px 44px 0px 44px;
+    background: linear-gradient(45deg, var(--third) 0%, var(--secondary) 100%);
+  }
+
+  100% {
+    border-radius: 44px 0px 44px 0px;
+    background: linear-gradient(
+      45deg,
+      var(--primary) 0%,
+      var(--secondary) 100%
+    );
+  }
 }
