--- a/src/Components/Home/Contact/Contact.css
+++ b/src/Components/Home/Contact/Contact.css
@@ -63,7 +63,19 @@
   left: 40%;
   font-size: 50px;
   text-align: center;
+  animation: bottom 3s ease-in-out infinite;
 }
+
+/* @keyframes bottom {
+  0% {
+    bottom: -18%;
+    left: 40%;
+  }
+  100% {
+    bottom: -30%;
+    left: 40%;
+  }
+} */
 
 @media only screen and (max-width: 48em) {
   .c-bottom-icon {
