--- a/src/Components/Home/Works/Works.css
+++ b/src/Components/Home/Works/Works.css
@@ -74,7 +74,7 @@
   font-weight: 500;
   text-transform: capitalize;
   color: #d6d6d6;
-  font-size: 20px;
+  font-size: 1rem;
 }
 .art-section:hover .text {
   font-size: 30px;
