--- a/src/Components/Blogs/Blog.css
+++ b/src/Components/Blogs/Blog.css
@@ -25,8 +25,9 @@
 }
 
 /* Recent Blog */
-.side-bar {
-  position: sticky;
-  position: -webkit-sticky;
-  top: 10px;
+.r-header {
+  background-color: rgb(248, 248, 248);
+}
+::-webkit-scrollbar {
+  width: 0px;
 }
