--- a/src/Components/Home/Version/Version.css
+++ b/src/Components/Home/Version/Version.css
@@ -6,8 +6,8 @@
   width: 170px;
   height: 170px;
   background-color: white;
-  box-shadow: 0px 0px 18px -3px rgba(0, 0, 0, 0.1),
-    0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+  /*   box-shadow: 0px 0px 18px -3px rgba(0, 0, 0, 0.1),
+    0px 10px 15px -3px rgba(0, 0, 0, 0.1); */
   margin-bottom: 10px;
 
   /* border-radius: 100%; */
