--- a/src/Components/Home/Works/Works.css
+++ b/src/Components/Home/Works/Works.css
@@ -2,8 +2,8 @@
   background-color: white;
   border-radius: 30px;
   padding: 6px;
-  box-shadow: 0px 0px 18px -3px rgba(0, 0, 0, 0.1),
-    0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0px 0px 18px -3px rgba(0, 0, 0, 0.1),
+    0px 10px 15px -3px rgba(0, 0, 0, 0.1); */
 }
 
 .search-btn {
@@ -12,8 +12,8 @@
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  box-shadow: 0px 0px 18px -3px rgba(0, 0, 0, 0.1),
-    0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0px 0px 18px -3px rgba(0, 0, 0, 0.1),
+    0px 10px 15px -3px rgba(0, 0, 0, 0.1); */
   background: white;
   display: flex;
   justify-content: center;
