--- a/src/Components/Blogs/Blog.css
+++ b/src/Components/Blogs/Blog.css
@@ -1,10 +1,13 @@
 .b-card {
-  /* max-width: 100%; */
-  min-height: 400px;
-  background-image: url("https://images.unsplash.com/photo-1440778303588-435521a205bc?ixlib=rb-1.2.1&raw_url=true&q=80&fm=jpg&crop=entropy&cs=tinysrgb&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170");
+  max-width: 100%;
+  max-height: 400px;
+  /*  background-image: url("https://images.unsplash.com/photo-1440778303588-435521a205bc?ixlib=rb-1.2.1&raw_url=true&q=80&fm=jpg&crop=entropy&cs=tinysrgb&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170");
   background-position: center;
   background-size: cover;
-  background-repeat: no-repeat;
+  background-repeat: no-repeat; */
+}
+.b-card > img {
+  width: 100%;
 }
 
 .b-card-title {
