--- a/src/Components/Blogs/Blog.css
+++ b/src/Components/Blogs/Blog.css
@@ -20,13 +20,13 @@
 .c-img {
   overflow: hidden;
 }
-.image {
+/* .image {
   transition: all 0.9s ease-in-out;
 }
 .c-img:hover .image {
   transform: scale(1.05);
 }
-
+ */
 /* Recent Blog */
 .r-header {
   background-color: rgb(248, 248, 248);
