--- a/src/Components/Utils/Utils.css
+++ b/src/Components/Utils/Utils.css
@@ -4,7 +4,9 @@
   height: 55px;
   overflow: hidden;
   display: flex;
+  justify-content: space-between;
   max-width: 100%;
+
   transition: all 0.3s ease 0s;
 }
 
@@ -12,14 +14,12 @@
   border: 0 none;
   color: #333;
   height: 100%;
-  left: 0;
-  padding: 10px 25px;
-  top: 0;
-  width: calc(100% - 80px);
-
+  padding: 10px 0px 10px 25px;
+  width: calc(100% - 60px);
   outline: none;
-
   transition: 0.4s;
+  font-size: 20px;
+  font-family: "Delius", cursive;
 }
 .b-search-btn {
   display: flex;
@@ -27,16 +27,13 @@
   align-items: center;
   background: #ffffff none repeat scroll 0 0;
   border: 0 none;
-  font-size: 25px;
   height: 100%;
-  right: 0;
-  top: 0;
   -webkit-transition: all 0.3s ease 0s;
-  width: 80px;
+  width: 60px;
 }
 
 .fa-search {
-  font-size: 35px;
+  font-size: 33px;
   font-weight: 900;
   color: #808080;
 }
